[package]
name = "vu128"
version = "1.0.0"
authors = ["John Millikin <john@john-millikin.com>"]
edition = "2018"
description = "Efficient variable-length integers"
readme = "README.md"
repository = "https://github.com/jmillikin/rust-vu128"
license = "0BSD"

categories = [
	"encoding",
	"no-std",
]

include = [
	"/LICENSE.txt",
	"/vu128/*.rs",
]

[lib]
path = "vu128/vu128.rs"

[[test]]
name = "vu128_test"
path = "vu128/vu128_test.rs"
